--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -994,7 +994,7 @@ function loadMarkers() {
         let f = cell_lookup[ title ];
         o.area = f.properties.area;
 
-        o.modified = true;
+        o.remapped = title;
 
         feature.geometry.coordinates[0] += f.geometry.coordinates[0];
         feature.geometry.coordinates[1] += f.geometry.coordinates[1];
