--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -527,9 +527,10 @@ const capitalize = s => s[0].toUpperCase()+s.slice(1);
 
 function itemArea(o) {
   if (o.area) return o.area;
-  let exit = exits[o.cell];
-  if (exit) {
-    return exit.outer.properties.area;
+  let path = exits[o.cell];
+  if (path && path.length>0) {
+    //console.log(path, 'last door', path[path.length-1]);
+    return path[path.length-1].properties.area;
   }
 }
 
@@ -955,32 +956,23 @@ function loadMarkers() {
   }
 
   const visited = new Set();
-  function find_exit(cell_id, clear=true) {
+  function find_path(cell_id, clear = true) {
     if (clear) visited.clear();
     if (visited.has(cell_id)) return null;
     visited.add(cell_id);
     let doors = cell_doors[cell_id];
     for (const door of doors) {
       const nextDoor = ref_lookup[door.properties.other_door];
-      if (nextDoor.properties.area) return nextDoor;
-      const result = find_exit(nextDoor.properties.cell, false);
-      if (result) return result;
+      if (nextDoor.properties.area) return [door, nextDoor]; // Return the path
+      const result = find_path(nextDoor.properties.cell, false);
+      if (result) return [door, ...result]; // Append current door to the path
     }
     return null;
   }
 
   // for each cell, find and remember exits
   for (cell_id of Object.keys(cell_doors)) {
-    let outer_door = find_exit(cell_id);
-    if (outer_door) {
-      inner_door = ref_lookup[outer_door.properties.other_door];
-      if (inner_door) {
-        exits[cell_id] = {
-          inner: inner_door,
-          outer: outer_door,
-        }
-      }
-    }
+    exits[cell_id] = find_path(cell_id);
   }
 
   function getLoc(feature) {
@@ -990,17 +982,16 @@ function loadMarkers() {
 
     let area = itemArea(o);
 
-    let exit = exits[o.cell];
-    if (exit) {
-      let [ax,ay,az] = exit.inner.geometry.coordinates;
-      let [bx,by,bz] = exit.outer.geometry.coordinates;
-      x = x + bx - ax;
-      y = y + by - ay;
-      z = z + bz - az;
-
-      o.calculated_exit = {
-        inner: exit.inner.properties.ref_id,
-        outer: exit.outer.properties.ref_id,
+    if (o.cell) {
+      let path = exits[o.cell];
+      if (path && path.length>0) {
+        o._doors = path.map(f=>f.properties.ref_id);
+        for (door of path) {
+          let [dx,dy,dz] = door.geometry.coordinates;
+          x = x + dx;
+          y = y + dy;
+          z = z + dz;
+        }
       }
     }
 
