--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -991,7 +991,7 @@ function loadMarkers() {
 
     let o = feature.properties;
 
-    o._coordinates = feature.geometry.coordinates;
+    //o._coordinates = feature.geometry.coordinates;
 
     let area = itemArea(o);
 
