--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -956,18 +956,27 @@ function loadMarkers() {
     }
   }
 
-  const visited = new Set();
-  function find_path(cell_id, clear = true) {
-    if (clear) visited.clear();
-    if (visited.has(cell_id)) return null;
-    visited.add(cell_id);
-    let doors = cell_doors[cell_id];
-    for (const door of doors) {
-      const nextDoor = ref_lookup[door.properties.other_door];
-      if (nextDoor.properties.area) return [door, nextDoor]; // Return the path
-      const result = find_path(nextDoor.properties.cell, false);
-      if (result) return [door, ...result]; // Append current door to the path
+  function find_path(cellId) {
+    const visited = new Set();
+    const queue = [[cellId, []]]; // Queue of [currentCellId, path]
+
+    while (queue.length > 0) {
+      const [currentCellId, path] = queue.shift();
+
+      if (visited.has(currentCellId)) continue;
+      visited.add(currentCellId);
+
+      for (const door of cell_doors[currentCellId]) {
+        const nextDoor = ref_lookup[door.properties.other_door];
+
+        if (nextDoor.properties.area) {
+          return [...path, door, nextDoor]; // Return the path
+        }
+
+        queue.push([nextDoor.properties.cell, [...path, door]]);
+      }
     }
+
     return null;
   }
 
