--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -222,6 +222,7 @@ let maps = {
   'CoventGardenWorldSpace': { name:'Covent Garden', scale: 3.77, offset: {x:6000, y:4800}, hidden: true },
   'BromleyGladesWorld': { name: 'Bromley Glades', scale: 1, offset: {x:0, y:0}, hidden: true },
   'StPaulsWorld': { name: 'St Pauls', scale: 1, offset: {x:0, y:0}, hidden: true },
+  'IWMWorld':{ name: "War Museum", scale: 1, offset: {x:0, y:0}, hidden: true },
   'DumpWorld': { name: 'Dump', scale: 1, offset: {x:0, y:0}, hidden: true },
   'BromleyPindarWorld': { name: 'Bromley Pindar', scale: 1, offset: {x:0, y:0}, hidden: true },
 };
