--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -212,12 +212,15 @@ let maps = {
       'BromleyPindarWorld':{ scale: 0.1, offset: {x:33841.644531, y:-78117.046875} },
     },
   },
+  // individual maps
   'WestminsterWorld' : { name: 'Westminster', scale: 1.9, offset: {x:7000, y:22000} },
   'IslingtonWorld': { name: 'Islington', scale: 3.82, offset: {x:0, y:-47500} },
   'HackneyWorld' : { name: 'Hackney', scale: 3.77, offset: {x:-77500, y:-63000} },
   'CamdenWorld': { name: 'Camden', scale: 3.77, offset: {x:15000, y:-126000} },
   'BankofEnglandWorld': { name:'Bank of England', scale: 3.77, offset: {x:6000, y:4800} },
-  'CoventGardenWorldSpace': { name:'Covent Garden', scale: 3.77, offset: {x:6000, y:4800}, hidden: true },
+
+  // some maps are hidden so offset doesn't matter here
+  'CoventGardenWorldSpace': { name:'Covent Garden', scale: 3.77, offset: {x:0, y:0}, hidden: true },
   'BromleyGladesWorld': { name: 'Bromley Glades', scale: 1, offset: {x:0, y:0}, hidden: true },
   'StPaulsWorld': { name: 'St Pauls', scale: 1, offset: {x:0, y:0}, hidden: true },
   'IWMWorld':{ name: "War Museum", scale: 1, offset: {x:0, y:0}, hidden: true },
